<?php

class Animal
{
  public function makeSound()
  {
    echo "The animal makes a sound.";
  }
}
